update charm with its specific needs

--- a/srv/charm/nginx.conf
+++ b/srv/charm/nginx.conf
@@ -1,17 +1,19 @@
 server {
 	include /www/chee.party/share/nginx/error_page.nginx;
-	include /www/chee.party/share/nginx/ssl.nginx;
+	include /www/chee.party/share/nginx/cert.nginx;
+	listen 35354 ssl http2;
+	listen [::]:35354 ssl http2;
 
 	default_type text/plain;
 
-	server_name charm.chee.party
+	server_name charm.chee.party;
 	access_log /www/chee.party/srv/charm/logs/access.log;
 	error_log /www/chee.party/srv/charm/logs/error.log;
 
 	location / {
 		include /www/chee.party/share/nginx/cors.nginx;
 		root /www/chee.party/srv/charm/html;
-		proxy_pass http://localhost:35354;
+		proxy_pass http://localhost:35352;
 		proxy_set_header Host $http_host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
