add default expiration config

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,1 +1,11 @@
+map $sent_http_content_type $expires {
+	default off;
+	application/xml epoch;
+	text/html epoch;
+	text/css epoch;
+	application/javascript epoch;
+	application/json epoch;
+	~image/ max;
+}
+
 include /www/chee.party/srv/*/nginx.conf;
