fix fastcgi conf and add comment

--- a/srv/blog/nginx.conf
+++ b/srv/blog/nginx.conf
@@ -29,7 +29,9 @@ server {
         client_max_body_size 2048m;
         include fastcgi.conf;
         fastcgi_intercept_errors on;
-        fastcgi_pass php;
+        # this expects you to have set up php-fpm with php-fpm as the upstream!
+        # (default on fedora)
+        fastcgi_pass php-fpm;
 	fastcgi_param PHP_VALUE "upload_max_filesize=2048M \n post_max_size=2048M";
 	fastcgi_buffers 8 8k;
 	fastcgi_buffer_size 16k;
