--- a/nginx.conf
+++ b/nginx.conf
@@ -8,4 +8,11 @@ map $sent_http_content_type $expires {
 	~image/ max;
 }
 
+proxy_cache_path /www/cache
+	levels=1:2
+	keys_zone=party:10m
+	max_size=10g
+	inactive=60m
+	use_temp_path=off;
+
 include /www/chee.party/srv/*/nginx.conf;
