--- a/srv/blog/nginx.conf
+++ b/srv/blog/nginx.conf
@@ -25,6 +25,11 @@ server {
     }
 
     location ~ \.php$ {
+        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+    	if (!-f $document_root$fastcgi_script_name) {
+           return 404;
+        }
+	fastcgi_index index.php;
         expires $expires;
         client_max_body_size 2048m;
         include fastcgi.conf;
@@ -36,7 +41,7 @@ server {
 	fastcgi_buffers 8 8k;
 	fastcgi_buffer_size 16k;
     }
-    
+
     # disable access for noisy files
     location = /favicon.ico {
         log_not_found off;
