--- a/srv/nginx.conf
+++ b/srv/nginx.conf
@@ -4,20 +4,20 @@ server {
 
 	default_type text/plain;
 
-	server_name hb.chee.party;
-	access_log /www/chee.party/srv/hb/logs/access.log;
-	error_log /www/chee.party/srv/hb/logs/error.log;
+	server_name .chee.party;
+	access_log /www/chee.party/srv//logs/access.log;
+	error_log /www/chee.party/srv//logs/error.log;
 
-	location / {
+	location / {                
 		include /www/chee.party/share/nginx/cors.nginx;
-		root /www/chee.party/srv/hb/html;
-		proxy_pass http://81.98.74.120:8581;
+		root /srv/www/;
+		proxy_pass http://localhost:;
 		proxy_set_header Host $http_host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Party-Service hb;
-		include /www/chee.party/share/nginx/proxy-cache.nginx;
+		proxy_set_header X-Party-Service ;
+		include /www/chee.party/nginx/blocks/proxy-cache.nginx;
 		expires $expires;
 		client_max_body_size 222m;
 	}
@@ -26,6 +26,6 @@ server {
 server {
 	listen 80;
 	listen [::]:80;
-	server_name hb.chee.party;
-	return 301 https://hb.chee.party$request_uri;
+	server_name .chee.party;
+	return 301 https://.chee.party$request_uri;
 }
