--- a/srv/bento/nginx.conf
+++ b/srv/bento/nginx.conf
@@ -32,14 +32,14 @@ server {
 	server_name bento.chee.party;
 	access_log /www/chee.party/srv/bento/logs/access.log;
 	error_log /www/chee.party/srv/bento/logs/error.log;
-	return 301 https://bento.chee.party$request_uri;
+	return 301 https://bento.party$request_uri;
 }
 
 server {
 	listen 80;
 	listen [::]:80;
 	server_name bento.chee.party;
-	return 301 https://bento.chee.party$request_uri;
+	return 301 https://bento.party$request_uri;
 }
 
 
