last nginx commit

--- a/srv/files/nginx.conf
+++ b/srv/files/nginx.conf
@@ -4,13 +4,13 @@ server {
 
 	default_type text/plain;
 
-	server_name quiet.chee.party;
-	access_log /www/chee.party/srv/quiet/logs/access.log;
-	error_log /www/chee.party/srv/quiet/logs/error.log;
+	server_name files.chee.party;
+	access_log /www/chee.party/srv/files/logs/access.log;
+	error_log /www/chee.party/srv/files/logs/error.log;
 
 	location / {                
 		include /www/chee.party/share/nginx/cors.nginx;
-		root /srv/www/quiet;
+		root /srv/www/files;
 		expires $expires;
 		client_max_body_size 222m;
 	}
@@ -19,6 +19,6 @@ server {
 server {
 	listen 80;
 	listen [::]:80;
-	server_name quiet.chee.party;
-	return 301 https://quiet.chee.party$request_uri;
+	server_name files.chee.party;
+	return 301 https://files.chee.party$request_uri;
 }
