--- a/srv/operator/nginx.conf
+++ b/srv/operator/nginx.conf
@@ -2,12 +2,12 @@ server {
     include /www/chee.party/share/nginx/error_page.nginx;
     include /www/chee.party/share/nginx/ssl.nginx;
     server_name operator.chee.party;
-    return 301 https://bento.chee.party$request_uri;
+    return 301 https://bento.party$request_uri;
 }
 
 server {
     listen 80;
     listen [::]:80;
     server_name operator.chee.party;
-    return 301 https://bento.chee.party$request_uri;
+    return 301 https://bento.party$request_uri;
 }
