--- a/srv/repl/nginx.conf
+++ b/srv/repl/nginx.conf
@@ -1,24 +1,25 @@
 server {
-	include /www/chee.party/share/nginx/error_page.nginx;
-	include /www/chee.party/share/nginx/ssl.nginx;
+    include /www/chee.party/share/nginx/error_page.nginx;
+    include /www/chee.party/share/nginx/ssl.nginx;
 
-	default_type text/plain;
+    default_type text/plain;
 
-	server_name repl.chee.party;
-	access_log /www/chee.party/srv/repl/logs/access.log;
-	error_log /www/chee.party/srv/repl/logs/error.log;
+    server_name repl.chee.party;
+    access_log /www/chee.party/srv/repl/logs/access.log;
+    error_log /www/chee.party/srv/repl/logs/error.log;
 
-	location / {                
-		include /www/chee.party/share/nginx/cors.nginx;
-		root /srv/www/repl;
-		expires $expires;
-		client_max_body_size 222m;
-	}
+    location / {                
+	    include /www/chee.party/share/nginx/cors.nginx;
+        include /www/chee.party/share/nginx/coop.nginx;
+	    root /srv/www/repl;
+	    expires $expires;
+	    client_max_body_size 222m;
+    }
 }
 
 server {
-	listen 80;
-	listen [::]:80;
-	server_name repl.chee.party;
-	return 301 https://repl.chee.party$request_uri;
+    listen 80;
+    listen [::]:80;
+    server_name repl.chee.party;
+    return 301 https://repl.chee.party$request_uri;
 }
